# sunecity-rust-mvp

./: development-docker-compose.yml  docker-compose.yml
backend/: .env  Cargo.toml  Dockerfile
backend/migrations/: 000000_2025-10-16-create_schema.sql  000001_2025-10-16-create_schema.sql  000001_2025-10-16-create_table-passwords.sql  000002_2025-10-16-create_table-groups.sql  000003_2025-10-16-create_table-users.sql  000004_2025-10-16-create_table-login.sql  000005_2025-10-16-create_table-rel_login_group.sql  000006_2025-10-16-create_table-sunecity_token.sql  000007_2025-10-16-create_table-time_windows.sql  000008_2025-10-16-create_table-device.sql  000009_2025-10-16-create_table-map.sql  000010_2025-10-16-create_table-token_owner.sql  000011_2025-10-16-create_table-area_action_permission.sql  000012_2025-10-16-create_table-signal_permission.sql  000013_2025-10-16-alter_table-login.sql  000014_2025-10-16-alter_table-rel_login_group copy.sql  000015_2025-10-16-alter_table-sunecity_token.sql  000016_2025-10-16-alter_table-token_owner.sql  000017_2025-10-16-alter_table-area_action_permission.sql  000018_2025-10-16-alter_table-signal_permission.sql
docs/: class-diagram.puml
docs/bruno/sunecity-mvp-api/: bruno.json  collection.bru
frontend/: Dockerfile  package-lock.json  package.json
nginx/conf.d/: default.conf  nginx.conf
